# swelingo

./: .env.example  .env.pi.example  .gitignore  DEPLOY_RASPBERRY_PI.md  Dockerfile.web  docker-compose.local.yml  docker-compose.pi.yml  docker-compose.yml  nginx.conf  nginx.local.conf  nginx.tunnel.conf  package-lock.json
api-rust/: Cargo.toml  Dockerfile
api-rust/challenges/: 2026-04-18.json  2026-04-19.json  2026-04-20.json  2026-04-21.json  2026-04-22.json  2026-04-23.json  2026-04-24.json  2026-04-25.json  2026-04-26.json  2026-04-27.json  2026-04-28.json  2026-04-29.json  2026-04-30.json  2026-05-01.json  2026-05-02.json  2026-05-03.json  2026-05-04.json  2026-05-05.json  2026-05-06.json  2026-05-07.json  2026-05-08.json  2026-05-09.json  2026-05-10.json  2026-05-11.json  2026-05-12.json  2026-05-13.json  2026-05-14.json  2026-05-15.json  2026-05-16.json  2026-05-17.json  2026-05-18.json
api-rust/src/: auth.rs  cron.rs  data.rs  db.rs  lib.rs  main.rs  models.rs  ranks.rs  routes.rs  types.rs
api-rust/tests/: integration.rs
app/: .env.example  App.tsx  package-lock.json  package.json
app/src/: theme.ts
app/src/api/: cache.ts  client.ts  constants.ts
app/src/auth/: index.ts
app/src/components/: AvatarImage.tsx  AvatarImage.web.tsx  CodeEditorWidget.native.tsx  CodeEditorWidget.tsx  CodeEditorWidget.web.tsx
app/src/screens/: ChallengeScreen.tsx  CreateSquadScreen.tsx  HomeScreen.tsx  JoinSquadScreen.tsx  LeaderboardScreen.tsx  LoginScreen.tsx  OnboardingScreen.tsx  ProfileScreen.tsx  SquadDetailScreen.tsx  SquadsHomeScreen.tsx
scripts/: deploy.sh
(+3 files in other folders)
